Fix some compiler warnings (Locale deprecation, suppress unchecked warning, ...)