@@ -43,7 +43,7 @@ public class Language {
   
   // --- Private members
   private Locale buildLocale() {
-    return new Locale(code);
+    return Locale.of(code);
   }
   
   /**
@@ -144,7 +144,7 @@ public class Language {
      * Sets the list of letters to remove from the standard vowel or consonant
      * list. This has no effect on the additional vowels and consonant list but
      * removes vowels or consonants from the default a-z list that is augmented
-     * with the additional letters. Typically if a letter is in this list, it
+     * with the additional letters. Typically, if a letter is in this list, it
      * should be in one of the "additional" lists.
      *
      * @param letters the letters to remove from default lists
