@@ -18,9 +18,9 @@ class LocaleTest {
     String plText = "STANOWIĄCEJ CZĘŚĆ RODZINY JĘZYKÓW";
     String skText = "TU ŽIADNA VEĽKÁ JAZYKOVÁ ČISTKA";
 
-    String lowerCase = text.toLowerCase(new Locale("fr"));
-    String plLowerCase = plText.toLowerCase(new Locale("pl"));
-    String skLowerCase = skText.toLowerCase(new Locale("sk"));
+    String lowerCase = text.toLowerCase(Locale.of("fr"));
+    String plLowerCase = plText.toLowerCase(Locale.of("pl"));
+    String skLowerCase = skText.toLowerCase(Locale.of("sk"));
 
     assertThat(lowerCase, equalTo("aç êè oč ïś"));
     assertThat(plLowerCase, equalTo("stanowiącej część rodziny języków"));
@@ -33,9 +33,9 @@ class LocaleTest {
     String ptText = "população";
     String ltText = "sovietmečiu mūšos tyrelio pelkė buvo numatyta durpių";
 
-    String huUpperCase = huText.toUpperCase(new Locale("hu"));
-    String ptUpperCase = ptText.toUpperCase(new Locale("pt"));
-    String ltUpperCase = ltText.toUpperCase(new Locale("lt"));
+    String huUpperCase = huText.toUpperCase(Locale.of("hu"));
+    String ptUpperCase = ptText.toUpperCase(Locale.of("pt"));
+    String ltUpperCase = ltText.toUpperCase(Locale.of("lt"));
 
     assertThat(huUpperCase, equalTo("SZÓÖSSZETÉTELEKBEN"));
     assertThat(ptUpperCase, equalTo("POPULAÇÃO"));
@@ -47,8 +47,8 @@ class LocaleTest {
     String text1 = "tunçtan yapılmış olan heykelin yüksekliği";
     String text2 = "YAPMIŞ OLDUĞU ÖZVERİLİ ÇALIŞMALARI";
 
-    String upper = text1.toUpperCase(new Locale("tr"));
-    String lower = text2.toLowerCase(new Locale("tr"));
+    String upper = text1.toUpperCase(Locale.of("tr"));
+    String lower = text2.toLowerCase(Locale.of("tr"));
 
     assertThat(upper, equalTo("TUNÇTAN YAPILMIŞ OLAN HEYKELİN YÜKSEKLİĞİ"));
     assertThat(lower, equalTo("yapmış olduğu özverili çalışmaları"));
